# rafamsa-ml-mentoring

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GLOSSARY.md  README.md  RESEARCH.md  pyproject.toml
.claude/: settings.json
.claude/agents/: lucca.md  magus.md
.claude/commands/: ask.md
.claude/instructions/: user.md
.claude/skills/evaluate-user/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: lucca.agent.md  magus.agent.md
.github/instructions/: user.instructions.md
.github/prompts/: evaluate-user.prompt.md
.github/skills/evaluate-user/: SKILL.md
class-01/: README.md  class-01-digit-recognition.ipynb
class-02/: README.md  class-02-letter-recognition.ipynb  teacher-notes.md
class-03/: README.md  class-03-handwriting-regression.ipynb
class-03b-project-kickoff/: README.md  project-scope.md
class-04/: README.md
class-05/: README.md
class-06/: README.md
class-07/: README.md
class-08/: README.md
class-09/: README.md
scripts/: lab.py
